--- a/src/components/web/categories/categoriesDetails.css
+++ b/src/components/web/categories/categoriesDetails.css
@@ -5,7 +5,7 @@
 
 .test {
   box-sizing: border-box;
-  height: 350px !important;
+  /* height: 350px !important; */
   padding: 10px !important;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -18,4 +18,16 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+}
+
+.my-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px !important;
+}
+
+.my-card .my-btn {
+  width: 130px !important;
 }
