--- a/src/components/web/products/product.css
+++ b/src/components/web/products/product.css
@@ -130,3 +130,17 @@ button {
   font-size: 20px;
   margin: 0 3px;
 }
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.btns a {
+  text-decoration: none;
+  color: white;
+}
