--- a/src/components/web/categories/categories.css
+++ b/src/components/web/categories/categories.css
@@ -11,16 +11,21 @@ img {
 .categories {
   justify-content: center;
   align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  border-radius: 20px;
 }
 .categories h3 {
   text-align: center;
+  margin-top: 10px;
   margin-bottom: 20px;
-  font-size: 32px;
-  font-weight: 600;
+  font-size: 35px;
+  font-weight: 1000;
 }
 
 .container .categories {
-  height: 30.8vh;
+  height: 34.1vh;
 }
 
 .main {
@@ -33,7 +38,7 @@ img {
 .main .home {
   display: flex;
   justify-content: space-between;
-  height: 53.3vh;
+  height: 50vh;
   background-color: #2b3035;
 }
 
