--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 body {
   background-color: #ddd !important;
+
+  font-family: "Comfortaa", sans-serif !important;
+  font-optical-sizing: auto !important;
+  font-weight: 700 !important;
+  /* font-style: normal; */
 }
